--- a/Proyecto_AA.ipynb
+++ b/Proyecto_AA.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 43,
    "id": "31e65a90",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 44,
    "id": "309bcbe2",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "[531594 rows x 82 columns]"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 45,
    "id": "549f7a8a",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "[163 rows x 2 columns]"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 46,
    "id": "90fde7e8",
    "metadata": {},
    "outputs": [],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 47,
    "id": "d1052e4a",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "[322039 rows x 6 columns]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 48,
    "id": "43ac276f",
    "metadata": {},
    "outputs": [],
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 50,
    "id": "c4f2f7f0",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
        "      <th>Cuauhtémoc</th>\n",
        "      <th>Salto del Agua</th>\n",
        "      <th>Balbuena</th>\n",
-       "      <th>Guelatao</th>\n",
+       "      <th>Guerrero</th>\n",
        "      <th>Merced</th>\n",
        "      <th>San Lázaro</th>\n",
        "      <th>Juanacatlán</th>\n",
@@ -1075,7 +1075,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>25762 rows × 364 columns</p>\n",
+       "<p>26406 rows × 364 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1113,7 +1113,7 @@
        "\n",
        "l                                                                             \\\n",
        "i                                          Candelaria            Chapultepec   \n",
-       "j                                 Guelatao     Merced San Lázaro Juanacatlán   \n",
+       "j                                 Guerrero     Merced San Lázaro Juanacatlán   \n",
        "p        q                                                                     \n",
        "Acatitla Aculco                        0.0       0.00        0.0         0.0   \n",
        "         Agrícola Oriental             0.0       0.00        0.0         0.0   \n",
@@ -1207,10 +1207,10 @@
        "         Zapotitlán                          0.0  \n",
        "         Zaragoza                            0.0  \n",
        "\n",
-       "[25762 rows x 364 columns]"
+       "[26406 rows x 364 columns]"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "id": "3d8c469d",
    "metadata": {},
    "outputs": [
@@ -1239,19 +1239,19 @@
       "text/plain": [
        "10        9\n",
        "11        9\n",
-       "13        9\n",
-       "21        9\n",
        "62        9\n",
+       "64        9\n",
+       "69        9\n",
        "         ..\n",
-       "531152    9\n",
-       "531154    9\n",
+       "530876    9\n",
+       "530966    9\n",
        "531158    9\n",
        "531161    9\n",
        "531164    9\n",
-       "Name: p5_12_7, Length: 61772, dtype: int64"
+       "Name: p5_12_7, Length: 24634, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "id": "40383271",
    "metadata": {},
    "outputs": [],
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "b19935b4",
    "metadata": {},
    "outputs": [
@@ -1635,7 +1635,7 @@
        "[24634 rows x 82 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "id": "94bde60d",
    "metadata": {},
    "outputs": [
@@ -1667,7 +1667,7 @@
        "Name: dto_origen, Length: 24634, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "dc7602da",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1785,7 @@
        "[300 rows x 2 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "ce15b2ed",
    "metadata": {},
    "outputs": [],
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "id": "95651956",
    "metadata": {},
    "outputs": [
@@ -1917,7 +1917,7 @@
        "[36438 rows x 2 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "id": "43c21934",
    "metadata": {},
    "outputs": [
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "id": "7f805697",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "id": "681e2d01",
    "metadata": {},
    "outputs": [],
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "id": "11045ed4",
    "metadata": {},
    "outputs": [
@@ -2017,7 +2017,7 @@
        "Name: metro_origen, Length: 110256, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "id": "c817270f",
    "metadata": {},
    "outputs": [
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "id": "a31c0567",
    "metadata": {},
    "outputs": [
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 64,
    "id": "9585d55f",
    "metadata": {},
    "outputs": [
@@ -2494,7 +2494,7 @@
        "[81 rows x 62 columns]"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2512,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 65,
    "id": "f43e28c4",
    "metadata": {},
    "outputs": [],
@@ -2536,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 66,
    "id": "c186e729",
    "metadata": {},
    "outputs": [
@@ -2901,7 +2901,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>364 rows × 25762 columns</p>\n",
+       "<p>364 rows × 26406 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3070,10 +3070,10 @@
        "  Villa de Aragón        Bosque de Aragón          0.0        0.0      0.0  \n",
        "                         Nezahualcóyotl            0.0        0.0      0.0  \n",
        "\n",
-       "[364 rows x 25762 columns]"
+       "[364 rows x 26406 columns]"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3086,6 +3086,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "21c142da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee2579be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bfde0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0faa9aef",
    "metadata": {},
    "outputs": [],
    "source": []
