--- a/Proyecto_AA.ipynb
+++ b/Proyecto_AA.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "14febcc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "31e65a90",
    "metadata": {},
    "outputs": [],
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "309bcbe2",
    "metadata": {},
    "outputs": [
@@ -387,7 +388,7 @@
        "[531594 rows x 82 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "549f7a8a",
    "metadata": {},
    "outputs": [
@@ -505,7 +506,7 @@
        "[163 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "90fde7e8",
    "metadata": {},
    "outputs": [],
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "d1052e4a",
    "metadata": {},
    "outputs": [
@@ -683,7 +684,7 @@
        "[322039 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "43ac276f",
    "metadata": {},
    "outputs": [],
@@ -705,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "c4f2f7f0",
    "metadata": {},
    "outputs": [
@@ -1210,7 +1211,7 @@
        "[26406 rows x 364 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "cac90c42",
    "metadata": {},
    "outputs": [],
@@ -1239,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "3d8c469d",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1261,7 @@
        "Name: p5_12_7, Length: 61772, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "40383271",
    "metadata": {},
    "outputs": [],
@@ -1283,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "b19935b4",
    "metadata": {},
    "outputs": [
@@ -1644,7 +1645,7 @@
        "[24634 rows x 82 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1655,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "94bde60d",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1677,7 @@
        "Name: dto_origen, Length: 24634, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "dc7602da",
    "metadata": {},
    "outputs": [
@@ -1794,7 +1795,7 @@
        "[300 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1805,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "ce15b2ed",
    "metadata": {},
    "outputs": [],
@@ -1819,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "95651956",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1927,7 @@
        "[36438 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1937,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "43c21934",
    "metadata": {},
    "outputs": [
@@ -1967,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "7f805697",
    "metadata": {},
    "outputs": [
@@ -1987,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "681e2d01",
    "metadata": {},
    "outputs": [],
@@ -2005,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "11045ed4",
    "metadata": {},
    "outputs": [
@@ -2026,7 +2027,7 @@
        "Name: metro_origen, Length: 110256, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "c817270f",
    "metadata": {},
    "outputs": [
@@ -2062,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "a31c0567",
    "metadata": {},
    "outputs": [
@@ -2087,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "9585d55f",
    "metadata": {},
    "outputs": [
@@ -2503,7 +2504,7 @@
        "[81 rows x 62 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2521,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "f43e28c4",
    "metadata": {},
    "outputs": [],
@@ -2545,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "c186e729",
    "metadata": {},
    "outputs": [
@@ -3082,7 +3083,7 @@
        "[364 rows x 26406 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3097,15 +3098,108 @@
    "id": "21c142da",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def grad_conjugado(A, b, x0, tol, max_iter=1000):\n",
+    "    \"\"\"\n",
+    "    Implementación del método del gradiente conjugado para resolver sistemas de ecuaciones lineales.\n",
+    "\n",
+    "    Args:\n",
+    "    A (numpy.ndarray): Matriz de coeficientes del sistema, debe ser simétrica y definida positiva.\n",
+    "    b (numpy.ndarray): Vector de términos constantes del sistema.\n",
+    "    x0 (numpy.ndarray): Estimación inicial de la solución.\n",
+    "    tol (float): Tolerancia para el criterio de convergencia.\n",
+    "    max_iter (int): Número máximo de iteraciones permitidas.\n",
+    "\n",
+    "    Returns:\n",
+    "    tuple:\n",
+    "        numpy.ndarray: Aproximación de la solución del sistema Ax = b.\n",
+    "        int: Número de iteraciones realizadas.\n",
+    "    \"\"\"\n",
+    "    # Inicialización de variables\n",
+    "    r0 = A @ x0 - b   # Residuo inicial\n",
+    "    p0 = -r0          # Dirección inicial de búsqueda\n",
+    "    k = 0             # Contador de iteraciones\n",
+    "    rTr0 = np.dot(r0, r0)  # Producto escalar del residuo inicial consigo mismo\n",
+    "\n",
+    "    # Bucle principal del método del gradiente conjugado\n",
+    "    while np.linalg.norm(r0) > tol and k < max_iter:\n",
+    "        Ap0 = A @ p0  # Multiplicación matriz-vector\n",
+    "        alpha = rTr0 / np.dot(p0, Ap0)  # Tamaño de paso óptimo\n",
+    "\n",
+    "        x1 = x0 + alpha * p0  # Actualización de la solución\n",
+    "        r1 = r0 + alpha * Ap0  # Actualización del residuo\n",
+    "        rTr1 = np.dot(r1, r1)  # Producto escalar del nuevo residuo\n",
+    "\n",
+    "        beta = rTr1 / rTr0  # Factor para actualizar la dirección de búsqueda\n",
+    "        p0 = -r1 + beta * p0  # Nueva dirección de búsqueda\n",
+    "        \n",
+    "        # Actualización de variables para la próxima iteración\n",
+    "        x0, r0, rTr0 = x1, r1, rTr1\n",
+    "        k += 1\n",
+    "\n",
+    "    return x1, k\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "ee2579be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input [[0.36117872 0.43158662 0.99969061]\n",
+      " [0.33705009 0.60706184 0.13000196]\n",
+      " [0.67397103 0.59968576 0.00215363]] \n",
+      "\n",
+      "Valor de la función objetivo: 1.4859552011578203\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Definimos algunas matrices de prueba\n",
+    "n = 3  # Dimensión de las matrices G y g\n",
+    "q = 4  # Dimensión no cuadrada de Pa\n",
+    "k = 0.5  # Parámetro de regularización\n",
+    "\n",
+    "# Matrices dummy\n",
+    "g = np.random.rand(n, n)\n",
+    "G = np.random.rand(n, n)\n",
+    "Pa = np.random.rand(q, n**2)  # Pa tiene dimensiones q x n^2\n",
+    "\n",
+    "# Deformación de G, por ejemplo, una rotación simple\n",
+    "theta = np.pi / 4  # 45 grados de rotación\n",
+    "rotation_matrix = np.array([[np.cos(theta), -np.sin(theta), 0],\n",
+    "                            [np.sin(theta),  np.cos(theta), 0],\n",
+    "                            [0,              0,             1]])\n",
+    "G_prime = G @ rotation_matrix\n",
+    "\n",
+    "# Función para calcular va y va_prime\n",
+    "def compute_va(g, G_prime, Pa, n, q):\n",
+    "    g_flat = g.flatten()  # Aplanamos g para poder multiplicar por Pa\n",
+    "    G_prime_flat = G_prime.flatten()  # Lo mismo para G_prime\n",
+    "    va = Pa @ g_flat\n",
+    "    va_prime = Pa @ G_prime_flat\n",
+    "    return va, va_prime  # Mantenemos va y va_prime como vectores\n",
+    "\n",
+    "# Calcular va y va_prime\n",
+    "va, va_prime = compute_va(g, G_prime, Pa, n, q)\n",
+    "\n",
+    "# Función objetivo\n",
+    "def objective_function(g, G, va, va_prime, k):\n",
+    "    term1 = np.sum((g - G)**2)\n",
+    "    term2 = k * np.sum((va - va_prime)**2)\n",
+    "    return 0.5 * (term1 + term2)\n",
+    "\n",
+    "# Calcular el valor de la función objetivo\n",
+    "objective_value = objective_function(g, G, va, va_prime, k)\n",
+    "print(\"Input\", g, \"\\n\")\n",
+    "print(\"Valor de la función objetivo:\", objective_value)\n"
+   ]
   },
   {
    "cell_type": "code",
