--- a/Proyecto_AA.ipynb
+++ b/Proyecto_AA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "14febcc7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "31e65a90",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "309bcbe2",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "[531594 rows x 82 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "549f7a8a",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
        "[163 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "90fde7e8",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "d1052e4a",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
        "[322039 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "43ac276f",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "c4f2f7f0",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1211,7 @@
        "[26406 rows x 364 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "cac90c42",
    "metadata": {},
    "outputs": [],
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "3d8c469d",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1261,7 @@
        "Name: p5_12_7, Length: 61772, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "40383271",
    "metadata": {},
    "outputs": [],
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "b19935b4",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1645,7 @@
        "[24634 rows x 82 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "94bde60d",
    "metadata": {},
    "outputs": [
@@ -1677,7 +1677,7 @@
        "Name: dto_origen, Length: 24634, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "dc7602da",
    "metadata": {},
    "outputs": [
@@ -1795,7 +1795,7 @@
        "[300 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "ce15b2ed",
    "metadata": {},
    "outputs": [],
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "id": "95651956",
    "metadata": {},
    "outputs": [
@@ -1927,7 +1927,7 @@
        "[36438 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1938,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "id": "43c21934",
    "metadata": {},
    "outputs": [
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "7f805697",
    "metadata": {},
    "outputs": [
@@ -1988,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "681e2d01",
    "metadata": {},
    "outputs": [],
@@ -2006,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "11045ed4",
    "metadata": {},
    "outputs": [
@@ -2027,7 +2027,7 @@
        "Name: metro_origen, Length: 110256, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "id": "c817270f",
    "metadata": {},
    "outputs": [
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "id": "a31c0567",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "id": "9585d55f",
    "metadata": {},
    "outputs": [
@@ -2504,7 +2504,7 @@
        "[81 rows x 62 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2522,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "id": "f43e28c4",
    "metadata": {},
    "outputs": [],
@@ -2546,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "id": "c186e729",
    "metadata": {},
    "outputs": [
@@ -3083,7 +3083,7 @@
        "[364 rows x 26406 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3098,51 +3098,11 @@
    "id": "21c142da",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def grad_conjugado(A, b, x0, tol, max_iter=1000):\n",
-    "    \"\"\"\n",
-    "    Implementación del método del gradiente conjugado para resolver sistemas de ecuaciones lineales.\n",
-    "\n",
-    "    Args:\n",
-    "    A (numpy.ndarray): Matriz de coeficientes del sistema, debe ser simétrica y definida positiva.\n",
-    "    b (numpy.ndarray): Vector de términos constantes del sistema.\n",
-    "    x0 (numpy.ndarray): Estimación inicial de la solución.\n",
-    "    tol (float): Tolerancia para el criterio de convergencia.\n",
-    "    max_iter (int): Número máximo de iteraciones permitidas.\n",
-    "\n",
-    "    Returns:\n",
-    "    tuple:\n",
-    "        numpy.ndarray: Aproximación de la solución del sistema Ax = b.\n",
-    "        int: Número de iteraciones realizadas.\n",
-    "    \"\"\"\n",
-    "    # Inicialización de variables\n",
-    "    r0 = A @ x0 - b   # Residuo inicial\n",
-    "    p0 = -r0          # Dirección inicial de búsqueda\n",
-    "    k = 0             # Contador de iteraciones\n",
-    "    rTr0 = np.dot(r0, r0)  # Producto escalar del residuo inicial consigo mismo\n",
-    "\n",
-    "    # Bucle principal del método del gradiente conjugado\n",
-    "    while np.linalg.norm(r0) > tol and k < max_iter:\n",
-    "        Ap0 = A @ p0  # Multiplicación matriz-vector\n",
-    "        alpha = rTr0 / np.dot(p0, Ap0)  # Tamaño de paso óptimo\n",
-    "\n",
-    "        x1 = x0 + alpha * p0  # Actualización de la solución\n",
-    "        r1 = r0 + alpha * Ap0  # Actualización del residuo\n",
-    "        rTr1 = np.dot(r1, r1)  # Producto escalar del nuevo residuo\n",
-    "\n",
-    "        beta = rTr1 / rTr0  # Factor para actualizar la dirección de búsqueda\n",
-    "        p0 = -r1 + beta * p0  # Nueva dirección de búsqueda\n",
-    "        \n",
-    "        # Actualización de variables para la próxima iteración\n",
-    "        x0, r0, rTr0 = x1, r1, rTr1\n",
-    "        k += 1\n",
-    "\n",
-    "    return x1, k\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 75,
    "id": "ee2579be",
    "metadata": {},
    "outputs": [
@@ -3150,11 +3110,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input [[0.36117872 0.43158662 0.99969061]\n",
-      " [0.33705009 0.60706184 0.13000196]\n",
-      " [0.67397103 0.59968576 0.00215363]] \n",
+      "Input [[0.1 0.2 0.3]\n",
+      " [0.4 0.5 0.6]\n",
+      " [0.7 0.8 0.9]] \n",
       "\n",
-      "Valor de la función objetivo: 1.4859552011578203\n"
+      "Valor de la función objetivo: 2.488909226165795\n"
      ]
     }
    ],
@@ -3167,9 +3127,24 @@
     "k = 0.5  # Parámetro de regularización\n",
     "\n",
     "# Matrices dummy\n",
-    "g = np.random.rand(n, n)\n",
-    "G = np.random.rand(n, n)\n",
-    "Pa = np.random.rand(q, n**2)  # Pa tiene dimensiones q x n^2\n",
+    "# Definir dimensiones\n",
+    "n = 3  # Dimensión de las matrices G y g\n",
+    "q = 4  # Dimensión no cuadrada de Pa\n",
+    "\n",
+    "# Matrices predefinidas\n",
+    "g = np.array([[0.1, 0.2, 0.3],\n",
+    "              [0.4, 0.5, 0.6],\n",
+    "              [0.7, 0.8, 0.9]])\n",
+    "\n",
+    "G = np.array([[0.9, 0.8, 0.7],\n",
+    "              [0.6, 0.5, 0.4],\n",
+    "              [0.3, 0.2, 0.1]])\n",
+    "\n",
+    "Pa = np.array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9],\n",
+    "               [0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1],\n",
+    "               [0.2, 0.3, 0.5, 0.7, 0.11, 0.13, 0.17, 0.19, 0.23],\n",
+    "               [0.3, 0.1, 0.4, 0.1, 0.6, 0.9, 0.2, 0.8, 0.7]])\n",
+    "\n",
     "\n",
     "# Deformación de G, por ejemplo, una rotación simple\n",
     "theta = np.pi / 4  # 45 grados de rotación\n",
@@ -3203,19 +3178,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "2bfde0ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jacobiano de la función objetivo:\n",
+      " [[-0.77310581 -0.59833866 -0.09216254]\n",
+      " [ 0.00992883  0.69289351  1.20866059]\n",
+      " [ 1.04988744  1.76769688  2.01300847]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_gradient(g, G, va, va_prime, Pa, k):\n",
+    "    \"\"\"\n",
+    "    Calcula el gradiente de la función objetivo con respecto a la matriz g.\n",
+    "    \n",
+    "    Args:\n",
+    "    g (numpy.ndarray): Matriz variable de nxn.\n",
+    "    G (numpy.ndarray): Matriz dada de nxn.\n",
+    "    va (numpy.ndarray): Vector resultado de Pa*g.\n",
+    "    va_prime (numpy.ndarray): Vector resultado de Pa*G'.\n",
+    "    Pa (numpy.ndarray): Matriz de q x n^2.\n",
+    "    k (float): Parámetro de regularización.\n",
+    "\n",
+    "    Returns:\n",
+    "    numpy.ndarray: Gradiente de la función objetivo.\n",
+    "    \"\"\"\n",
+    "    # Derivada del primer término: directamente la diferencia entre g y G\n",
+    "    grad_term1 = g - G\n",
+    "    \n",
+    "    # Derivada del segundo término\n",
+    "    # Error entre va y va_prime\n",
+    "    error = va - va_prime\n",
+    "    # Va contribución al gradiente: Pa^T multiplicado por el error\n",
+    "    grad_term2_contrib = Pa.T @ error\n",
+    "    # Reshape y escala por el factor de regularización k\n",
+    "    grad_term2 = k * grad_term2_contrib.reshape(g.shape)\n",
+    "\n",
+    "    # Gradiente total\n",
+    "    gradient = grad_term1 + grad_term2\n",
+    "    \n",
+    "    return gradient\n",
+    "\n",
+    "# Supongamos que ya tenemos g, G, Pa, va, va_prime definidos como antes\n",
+    "# Supongamos también que k y las matrices están correctamente definidas\n",
+    "\n",
+    "# Cálculo de va y va_prime\n",
+    "va, va_prime = compute_va(g, G_prime, Pa, n, q)\n",
+    "\n",
+    "# Cálculo del gradiente\n",
+    "gradient = compute_gradient(g, G, va, va_prime, Pa, k)\n",
+    "print(\"Jacobiano de la función objetivo:\\n\", gradient)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "0faa9aef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solución encontrada:\n",
+      " [[0.79092771 0.70882331 0.60237297]\n",
+      " [0.52798231 0.39211876 0.28140159]\n",
+      " [0.22459131 0.0978443  0.00897434]]\n",
+      "Iteraciones realizadas: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def grad_conjugado(g, G, Pa, G_prime, k, tol, max_iter=1000):\n",
+    "    \"\"\"\n",
+    "    Implementa el método del gradiente conjugado para minimizar una función objetivo\n",
+    "    basada en matrices y una operación de diferenciación particular.\n",
+    "\n",
+    "    Args:\n",
+    "    g (numpy.ndarray): Matriz inicial nxn, punto de partida para la optimización.\n",
+    "    G (numpy.ndarray): Matriz dada nxn, representa una constante en la función objetivo.\n",
+    "    Pa (numpy.ndarray): Matriz q x n^2, utilizada para calcular los productos implicados en la función objetivo.\n",
+    "    G_prime (numpy.ndarray): Matriz G deformada, utilizada en el cálculo de va_prime.\n",
+    "    k (float): Coeficiente de regularización que equilibra los términos de la función objetivo.\n",
+    "    tol (float): Tolerancia para el criterio de convergencia, determina cuándo se considera que el método ha convergido.\n",
+    "    max_iter (int): Número máximo de iteraciones para evitar ciclos infinitos en casos de no convergencia.\n",
+    "\n",
+    "    Returns:\n",
+    "    tuple:\n",
+    "        numpy.ndarray: La solución aproximada, que minimiza la función objetivo.\n",
+    "        int: Número de iteraciones realizadas antes de la convergencia.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Calcular va y va_prime utilizando la función compute_va\n",
+    "    va, va_prime = compute_va(g, G_prime, Pa, n, q)\n",
+    "\n",
+    "    # Calcular el gradiente inicial basado en g y otros parámetros\n",
+    "    r = compute_gradient(g, G, va, va_prime, Pa, k)\n",
+    "    p = -r  # Dirección inicial de búsqueda\n",
+    "    rTr = np.sum(r * r)  # Producto punto del gradiente inicial consigo mismo\n",
+    "    x = g  # Inicialización de la solución\n",
+    "\n",
+    "    # Bucle de iteración principal del método del gradiente conjugado\n",
+    "    for j in range(max_iter):\n",
+    "        # Calcular Ap, donde p es la dirección actual de búsqueda\n",
+    "        Ap = compute_gradient(p, np.zeros_like(G), Pa @ p.flatten(), np.zeros_like(va_prime), Pa, k).reshape(p.shape)\n",
+    "        alpha = rTr / np.sum(p * Ap)  # Tamaño de paso óptimo\n",
+    "\n",
+    "        x = x + alpha * p  # Actualización de la solución\n",
+    "        r_new = r + alpha * Ap  # Actualización del gradiente\n",
+    "        \n",
+    "        if np.linalg.norm(r_new) < tol:  # Criterio de convergencia\n",
+    "            break\n",
+    "\n",
+    "        # Actualización de la dirección de búsqueda p\n",
+    "        beta = np.sum(r_new * r_new) / rTr\n",
+    "        p = -r_new + beta * p\n",
+    "        r, rTr = r_new, np.sum(r_new * r_new)  # Actualizar r y rTr para la próxima iteración\n",
+    "\n",
+    "    return x, j + 1  # Retorna la solución y el número de iteraciones realizadas\n",
+    "\n",
+    "\n",
+    "# Solución con datos dummy\n",
+    "solution, iterations = grad_conjugado(g, G, Pa, G_prime, k, 1e-14)\n",
+    "print(\"Solución encontrada:\\n\", solution)\n",
+    "print(\"Iteraciones realizadas:\", iterations)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -3234,7 +3328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
