--- a/Proyecto_AA.ipynb
+++ b/Proyecto_AA.ipynb
@@ -3102,7 +3102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 139,
    "id": "ee2579be",
    "metadata": {},
    "outputs": [
@@ -3110,7 +3110,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input [[0.1 0.2 0.3]\n",
+      "Input\n",
+      " [[0.1 0.2 0.3]\n",
       " [0.4 0.5 0.6]\n",
       " [0.7 0.8 0.9]] \n",
       "\n",
@@ -3172,7 +3173,7 @@
     "\n",
     "# Calcular el valor de la función objetivo\n",
     "objective_value = objective_function(g, G, va, va_prime, k)\n",
-    "print(\"Input\", g, \"\\n\")\n",
+    "print(\"Input: \\n\", g, \"\\n\")\n",
     "print(\"Valor de la función objetivo:\", objective_value)\n"
    ]
   },
