correccion de la gráfica

--- a/Proyecto_AA.ipynb
+++ b/Proyecto_AA.ipynb
@@ -2082,7 +2082,7 @@
     "frequency_counts = datos_estaciones[\"metro_destino\"].value_counts()\n",
     "\n",
     "# Plot histogram of frequencies with category names on the x-axis\n",
-    "frequency_counts.plot(kind='bar', title=\"Histogram of Frequency Counts for 'origen'\", xlabel=\"origen\", ylabel=\"Frequency\")\n",
+    "frequency_counts.plot(kind='bar', title=\"Histogram of Frequency Counts for 'destino'\", xlabel=\"destino\", ylabel=\"Frequency\")\n",
     "plt.show()"
    ]
   },
