--- a/Proyecto_AA.ipynb
+++ b/Proyecto_AA.ipynb
@@ -4241,24 +4241,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "b85e4862",
+   "execution_count": 66,
+   "id": "66c7502a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input: \n",
-      " [[0.1 0.2 0.3]\n",
-      " [0.4 0.5 0.6]\n",
-      " [0.7 0.8 0.9]] \n",
-      "\n",
-      "Valor de la función objetivo: 2.488909226165795\n"
+      "Matriz original:\n",
+      " [[  0.  34.   0. ...   0.   0.   5.]\n",
+      " [  2. 144.   0. ...   3.   0.  21.]\n",
+      " [  0.   0.   0. ...   0.   0.   0.]\n",
+      " ...\n",
+      " [  1.   9.   0. ...   5.   0.   7.]\n",
+      " [  0.   0.   0. ...   0.   0.   0.]\n",
+      " [  2.   4.   0. ...   0.   0.   5.]]\n",
+      "Matriz rotada:\n",
+      " [[  0.          36.11857223   0.         ...   0.           0.\n",
+      "    4.71520105]\n",
+      " [  1.71426294 122.7157033    0.         ...   2.98245857   0.\n",
+      "   19.81574629]\n",
+      " [  0.           0.           0.         ...   0.           0.\n",
+      "    0.        ]\n",
+      " ...\n",
+      " [  1.12814778   9.92339      0.         ...   5.57094148   0.\n",
+      "    7.96781598]\n",
+      " [  0.           0.           0.         ...   0.           0.\n",
+      "    0.        ]\n",
+      " [  2.21774901   4.33250404   0.         ...   0.           0.\n",
+      "    5.33843855]]\n",
+      "(163, 163)\n"
      ]
     }
    ],
    "source": [
+    "g= matriz_origen_destino.values\n",
+    "\n",
+    "G=matriz_origen_destino.values\n",
+    "\n",
+    "\n",
+    "def perturb_matrix(mat, perturbation_percent=15):\n",
+    "    \"\"\"\n",
+    "    Perturba las entradas de una matriz cuadrada nXn de manera uniforme dentro de un rango dado.\n",
+    "    \n",
+    "    Args:\n",
+    "    mat (numpy.ndarray): La matriz original nXn.\n",
+    "    perturbation_percent (float): El porcentaje máximo de perturbación para cada entrada.\n",
+    "    \n",
+    "    Returns:\n",
+    "    numpy.ndarray: La matriz perturbada.\n",
+    "    \"\"\"\n",
+    "    # Calcular el rango de perturbación como porcentaje\n",
+    "    perturbation_fraction = perturbation_percent / 100.0\n",
+    "    \n",
+    "    # Generar una matriz de perturbaciones aleatorias dentro del rango [-perturbation_fraction, perturbation_fraction]\n",
+    "    perturbations = np.random.uniform(-perturbation_fraction, perturbation_fraction, mat.shape)\n",
+    "    \n",
+    "    # Aplicar la perturbación: multiplicar cada perturbación por el valor correspondiente en la matriz original\n",
+    "    perturbed_mat = mat + (perturbations * mat)\n",
+    "    \n",
+    "    return perturbed_mat\n",
+    "\n",
+    "\n",
+    "# Aplicar perturbación\n",
+    "G_prime = perturb_matrix(G, 15)\n",
+    "\n",
+    "print(\"Matriz original:\\n\", G)\n",
+    "print(\"Matriz rotada:\\n\", G_prime)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b85e4862",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'flatten'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4596\\878550160.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[0mva_prime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPa\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mG_prime_flat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mva\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mva_prime\u001b[0m  \u001b[1;31m# Mantenemos va y va_prime como vectores\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[1;31m# Calcular va y va_prime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m \u001b[0mva\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mva_prime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_va\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mG_prime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPa\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[1;31m# Función objetivo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mobjective_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mva\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mva_prime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4596\\878550160.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(g, G_prime, Pa, n, q)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcompute_va\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mG_prime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPa\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m     \u001b[0mg_flat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Aplanamos g para poder multiplicar por Pa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m     \u001b[0mG_prime_flat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mG_prime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Lo mismo para G_prime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m     \u001b[0mva\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPa\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mg_flat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[0mva_prime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPa\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mG_prime_flat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6200\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6201\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6202\u001b[0m         \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6203\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6204\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'flatten'"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "# Aqui van datos prueba xdxdxdxd\n",
     "# Definimos algunas matrices de prueba\n",
     "n = 3  # Dimensión de las matrices G y g\n",
     "q = 4  # Dimensión no cuadrada de Pa\n",
@@ -4290,6 +4365,8 @@
     "                            [np.sin(theta),  np.cos(theta), 0],\n",
     "                            [0,              0,             1]])\n",
     "G_prime = G @ rotation_matrix\n",
+    "\n",
+    "'''\n",
     "\n",
     "# Función para calcular va y va_prime\n",
     "def compute_va(g, G_prime, Pa, n, q):\n",
